kubernetes/salle-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salle-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: salle-service
  template:
    metadata:
      labels:
        app: salle-service
    spec:
      containers:
      - name: salle-service
        image: yourusername/salle-service:latest
        ports:
        - containerPort: 5002
