kubernetes/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
