kubernetes/reservation-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
spec:
  selector:
    app: reservation-service
  ports:
  - protocol: TCP
    port: 5003
    targetPort: 5003
  type: ClusterIP
