kubernetes/salle-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: salle-service
spec:
  selector:
    app: salle-service
  ports:
  - protocol: TCP
    port: 5002
    targetPort: 5002
  type: ClusterIP
