kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meeting-room-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /reservations
        pathType: Prefix
        backend:
          service:
            name: reservation-service
            port:
              number: 5003
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 5001
      - path: /rooms
        pathType: Prefix
        backend:
          service:
            name: salle-service
            port:
              number: 5002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 5000
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
